@@ -1,3 +1,8 @@
+2013-08-07  Patrice Dumas  <pertusus@free.fr>
+
+	* tp/Texinfo/Convert/HTML.pm(_default_protect_text), 
+	tp/init/html32.pm: protect ^L with an entity.
+
 2013-08-06  Patrice Dumas  <pertusus@free.fr>
 
 	* tp/Texinfo/Convert/TexinfoXML.pm(_xml_attributes):
